# olypro-training

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: getting-started.md  presentation.md
src/olytrain/: __init__.py  config.py
src/olytrain/checkpoint/: __init__.py  manager.py  sync.py
src/olytrain/cli/: __init__.py  checkpoint.py  config.py  dashboard.py  dataset.py  eval.py  init.py  runs.py  status.py
src/olytrain/eval/: __init__.py  detection.py  pose.py
src/olytrain/integrations/: __init__.py  fiftyone_loader.py  mlflow_rtmpose.py  mlflow_setup.py  mlflow_task.py  mlflow_vision.py
tests/: test_checkpoint_manager.py  test_cli.py  test_config.py  test_eval.py  test_fiftyone_loader.py  test_init_status.py  test_mlflow_callbacks.py  test_mlflow_setup.py  test_runs.py  test_tb_parser.py
