[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olytrain"
version = "0.1.0"
description = "Shared training infrastructure for olypro projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.10",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
fiftyone = ["fiftyone>=0.23"]
optuna = ["optuna>=3.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[project.scripts]
olytrain = "olytrain.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "fiftyone"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fiftyone.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorboard.*"
ignore_missing_imports = true
